--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,13 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
+  primary:    #00BCD4,
+  secondary:  #0097A7,
+  danger:     #F50057,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  white:    #FFFFFF,
+  accent:     #F50057
 );
 
 
